--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 
     <ul id="download-area"></ul>
 
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
